--- a/index.html
+++ b/index.html
@@ -109,6 +109,14 @@
                         <div class="card-content">
                             <div class="news-list">
                                 <div class="news-item">
+                                    <div class="news-date">Apr 2025</div>
+                                    <div class="news-content">
+                                        <p>Long Research Paper: <a href="">
+                                            SQL-R1: Training Natural Language to SQL Reasoning Model By Reinforcement Learning</a> 
+                                            is available on Arxiv.</p>
+                                    </div>
+                                </div>
+                                <div class="news-item">
                                     <div class="news-date">Jan 2025</div>
                                     <div class="news-content">
                                         <p>Receive Intern Program offer and start internship in International Digital Economy Academy (IDEA), Shenzhen.</p>
@@ -237,6 +245,47 @@
                                 <!-- Publication Item -->
                                 <div class="publication-item">
                                     <div class="publication-thumbnail">
+                                        <img src="images/sqlr1.png" alt="Paper 1 thumbnail">
+                                    </div>
+                                    <div class="publication-info">
+                                        <h3 class="publication-title">
+                                            SQL-R1: Training Natural Language to SQL Reasoning Model By Reinforcement Learning
+                                            <span class="publication-year">(2025)</span>
+                                        </h3>
+                                        <p class="publication-authors">
+                                            <span class="author">Peixian Ma</span>,
+                                            <span class="author">Xialie Zhuang</span>,
+                                            <span class="author">Chengjin Xu</span>,
+                                            <span class="author">Xuhui Jiang</span>,
+                                            <span class="author">Ran Chen</span>,
+                                            <span class="author">Jian Guo</span>
+                                        </p>
+                                        <p class="publication-venue">
+                                            <span class="venue-name">Arxiv</span> |
+                                            <span class="venue-type">Preprint (Under Review)</span>
+                                        </p>
+                                        <div class="publication-footer">
+                                            <div class="publication-links">
+                                                <a href="" class="pub-link"><i class="fas fa-file-pdf"></i> PDF </a>
+                                                <a href="" class="pub-link"><i class="fas fa-code"></i> Code </a>
+                                                <a href="" class="pub-link"><i class="fas fa-quote-right"></i> Cite </a>
+                                                <a href="" class="pub-link"><i class="fas fa-external-link-alt"></i> DOI </a>
+                                            </div>
+                                            <div class="publication-stats">
+                                                <span class="stat-item">
+                                                    <i class="fas fa-quote-left"></i>
+                                                    <span>0 citations</span>
+                                                </span>
+                                                <span class="stat-item">
+                                                    <i class="fas fa-star"></i>
+                                                    <span>0 stars</span>
+                                                </span>
+                                            </div>
+                                        </div>
+                                    </div>
+                                </div>
+                                <div class="publication-item">
+                                    <div class="publication-thumbnail">
                                         <img src="images/rewriter.png" alt="Paper 1 thumbnail">
                                     </div>
                                     <div class="publication-info">
@@ -258,15 +307,15 @@
                                         </p>
                                         <div class="publication-footer">
                                             <div class="publication-links">
-                                                <a href="https://arxiv.org/pdf/2412.17068" class="pub-link"><i class="fas fa-file-pdf"></i> PDF</a>
-                                                <a href="https://arxiv.org/pdf/2412.17068" class="pub-link"><i class="fas fa-code"></i> Code (Coming Soon)</a>
-                                                <a href="https://arxiv.org/abs/2412.17068" class="pub-link"><i class="fas fa-quote-right"></i> Cite</a>
-                                                <a href="https://arxiv.org/abs/2412.17068" class="pub-link"><i class="fas fa-external-link-alt"></i> DOI</a>
+                                                <a href="https://arxiv.org/pdf/2412.17068" class="pub-link"><i class="fas fa-file-pdf"></i> PDF </a>
+                                                <a href="https://arxiv.org/pdf/2412.17068" class="pub-link"><i class="fas fa-code"></i> Code (Soon)</a>
+                                                <a href="https://arxiv.org/abs/2412.17068" class="pub-link"><i class="fas fa-quote-right"></i> Cite </a>
+                                                <a href="https://arxiv.org/abs/2412.17068" class="pub-link"><i class="fas fa-external-link-alt"></i> DOI </a>
                                             </div>
                                             <div class="publication-stats">
                                                 <span class="stat-item">
                                                     <i class="fas fa-quote-left"></i>
-                                                    <span>1 citations</span>
+                                                    <span>2 citations</span>
                                                 </span>
                                                 <span class="stat-item">
                                                     <i class="fas fa-star"></i>
@@ -311,11 +360,11 @@
                                             <div class="publication-stats">
                                                 <span class="stat-item">
                                                     <i class="fas fa-quote-left"></i>
-                                                    <span>30 citations</span>
+                                                    <span>35 citations</span>
                                                 </span>
                                                 <span class="stat-item">
                                                     <i class="fas fa-star"></i>
-                                                    <span>450 stars</span>
+                                                    <span>520 stars</span>
                                                 </span>
                                             </div>
                                         </div>
@@ -351,7 +400,7 @@
                                             <div class="publication-stats">
                                                 <span class="stat-item">
                                                     <i class="fas fa-quote-left"></i>
-                                                    <span>6 citations</span>
+                                                    <span>7 citations</span>
                                                 </span>
                                                 <span class="stat-item">
                                                     <i class="fas fa-star"></i>
