--- a/index.html
+++ b/index.html
@@ -570,7 +570,7 @@
                         </div>
                         <div class="card-content">
                             <div class="projects-list">
-                                <div class="project-item">
+                                <!-- <div class="project-item">
                                     <div class="project-header">
                                         <h4 class="project-name">Friday Agent</h4>
                                         <div class="project-links">
@@ -587,7 +587,7 @@
                                         <span class="tech-tag">AI Agent</span>
                                         <span class="tech-tag">Personal Life</span>
                                     </div>
-                                </div>
+                                </div> -->
 
                                 <div class="project-item">
                                     <div class="project-header">
@@ -654,7 +654,7 @@
                     </div>
 
                     <!-- Football Career card -->
-                    <div class="card">
+                    <!-- <div class="card">
                         <div class="card-header" style="background: #E1BEE7;">
                             <i class="fas fa-futbol"></i>
                             <h2>Football Career</h2>
@@ -786,7 +786,7 @@
                                 </div>
                             </div>
                         </div>
-                    </div>
+                    </div> -->
                 </div>
             </div>
         </div>
