--- a/index.html
+++ b/index.html
@@ -111,7 +111,7 @@
                                 <div class="news-item">
                                     <div class="news-date">Apr 2025</div>
                                     <div class="news-content">
-                                        <p>Long Research Paper: <a href="">
+                                        <p>Long Research Paper: <a href="https://arxiv.org/pdf/2504.08600">
                                             SQL-R1: Training Natural Language to SQL Reasoning Model By Reinforcement Learning</a> 
                                             is available on Arxiv.</p>
                                     </div>
@@ -266,10 +266,10 @@
                                         </p>
                                         <div class="publication-footer">
                                             <div class="publication-links">
-                                                <a href="" class="pub-link"><i class="fas fa-file-pdf"></i> PDF </a>
+                                                <a href="https://arxiv.org/pdf/2504.08600" class="pub-link"><i class="fas fa-file-pdf"></i> PDF </a>
                                                 <a href="" class="pub-link"><i class="fas fa-code"></i> Code </a>
-                                                <a href="" class="pub-link"><i class="fas fa-quote-right"></i> Cite </a>
-                                                <a href="" class="pub-link"><i class="fas fa-external-link-alt"></i> DOI </a>
+                                                <a href="https://arxiv.org/pdf/2504.08600" class="pub-link"><i class="fas fa-quote-right"></i> Cite </a>
+                                                <a href="https://arxiv.org/pdf/2504.08600" class="pub-link"><i class="fas fa-external-link-alt"></i> DOI </a>
                                             </div>
                                             <div class="publication-stats">
                                                 <span class="stat-item">
