--- a/index.html
+++ b/index.html
@@ -12,6 +12,7 @@
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0/css/all.min.css">
     <link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;500;600;700&display=swap" rel="stylesheet">
     <script src="../js/components/Navbar.js"></script>
+    <script src="js/components/PublicationList.js"></script>
 </head>
 <body>
     <!-- 添加导航栏 -->
@@ -241,176 +242,7 @@
                             <i class="fas fa-ellipsis-h"></i>
                         </div>
                         <div class="card-content">
-                            <div class="publications-list">
-                                <!-- Publication Item -->
-                                <div class="publication-item">
-                                    <div class="publication-thumbnail">
-                                        <img src="images/sqlr1.png" alt="Paper 1 thumbnail">
-                                    </div>
-                                    <div class="publication-info">
-                                        <h3 class="publication-title">
-                                            SQL-R1: Training Natural Language to SQL Reasoning Model By Reinforcement Learning
-                                            <span class="publication-year">(2025)</span>
-                                        </h3>
-                                        <p class="publication-authors">
-                                            <span class="author">Peixian Ma</span>,
-                                            <span class="author">Xialie Zhuang</span>,
-                                            <span class="author">Chengjin Xu</span>,
-                                            <span class="author">Xuhui Jiang</span>,
-                                            <span class="author">Ran Chen</span>,
-                                            <span class="author">Jian Guo</span>
-                                        </p>
-                                        <p class="publication-venue">
-                                            <span class="venue-name">Arxiv</span> |
-                                            <span class="venue-type">Preprint (Under Review)</span>
-                                        </p>
-                                        <div class="publication-footer">
-                                            <div class="publication-links">
-                                                <a href="https://arxiv.org/pdf/2504.08600" class="pub-link"><i class="fas fa-file-pdf"></i> PDF </a>
-                                                <a href="" class="pub-link"><i class="fas fa-code"></i> Code </a>
-                                                <a href="https://arxiv.org/pdf/2504.08600" class="pub-link"><i class="fas fa-quote-right"></i> Cite </a>
-                                                <a href="https://arxiv.org/pdf/2504.08600" class="pub-link"><i class="fas fa-external-link-alt"></i> DOI </a>
-                                            </div>
-                                            <div class="publication-stats">
-                                                <span class="stat-item">
-                                                    <i class="fas fa-quote-left"></i>
-                                                    <span>0 citations</span>
-                                                </span>
-                                                <span class="stat-item">
-                                                    <i class="fas fa-star"></i>
-                                                    <span>0 stars</span>
-                                                </span>
-                                            </div>
-                                        </div>
-                                    </div>
-                                </div>
-                                <div class="publication-item">
-                                    <div class="publication-thumbnail">
-                                        <img src="images/rewriter.png" alt="Paper 1 thumbnail">
-                                    </div>
-                                    <div class="publication-info">
-                                        <h3 class="publication-title">
-                                            A Plug-and-Play Natural Language Rewriter for Natural Language to SQL
-                                            <span class="publication-year">(2024)</span>
-                                        </h3>
-                                        <p class="publication-authors">
-                                            <span class="author">Peixian Ma</span>,
-                                            <span class="author">Boyan Li</span>,
-                                            <span class="author">Runzhi Jiang</span>,
-                                            <span class="author">Ju Fan</span>,
-                                            <span class="author">Nan Tang</span>,
-                                            <span class="author">Yuyu Luo</span>
-                                        </p>
-                                        <p class="publication-venue">
-                                            <span class="venue-name">Arxiv</span> |
-                                            <span class="venue-type">Preprint (Under Review)</span>
-                                        </p>
-                                        <div class="publication-footer">
-                                            <div class="publication-links">
-                                                <a href="https://arxiv.org/pdf/2412.17068" class="pub-link"><i class="fas fa-file-pdf"></i> PDF </a>
-                                                <a href="https://arxiv.org/pdf/2412.17068" class="pub-link"><i class="fas fa-code"></i> Code (Soon)</a>
-                                                <a href="https://arxiv.org/abs/2412.17068" class="pub-link"><i class="fas fa-quote-right"></i> Cite </a>
-                                                <a href="https://arxiv.org/abs/2412.17068" class="pub-link"><i class="fas fa-external-link-alt"></i> DOI </a>
-                                            </div>
-                                            <div class="publication-stats">
-                                                <span class="stat-item">
-                                                    <i class="fas fa-quote-left"></i>
-                                                    <span>2 citations</span>
-                                                </span>
-                                                <span class="stat-item">
-                                                    <i class="fas fa-star"></i>
-                                                    <span>0 stars</span>
-                                                </span>
-                                            </div>
-                                        </div>
-                                    </div>
-                                </div>
-                                <div class="publication-item">
-                                    <div class="publication-thumbnail">
-                                        <img src="images/survey.png" alt="Paper 2 thumbnail">
-                                    </div>
-                                    <div class="publication-info">
-                                        <h3 class="publication-title">
-                                            A Survey of NL2SQL with Large Language Models: Where are we, and where are we going?
-                                            <span class="publication-year">(2024)</span>
-                                        </h3>
-                                        <p class="publication-authors">
-                                            <span class="author">Xinyu Liu</span>,
-                                            <span class="author">Shuyu Shen</span>,
-                                            <span class="author">Boyan Li</span>,
-                                            <span class="author">Peixian Ma</span>,
-                                            <span class="author">Runzhi Jiang</span>,
-                                            <span class="author">Yuxin Zhang</span>,
-                                            <span class="author">Ju Fan</span>,
-                                            <span class="author">Guoliang Li</span>,
-                                            <span class="author">Nan Tang</span>,
-                                            <span class="author">Yuyu Luo</span>
-                                        </p>
-                                        <p class="publication-venue">
-                                            <span class="venue-name">Arxiv</span> |
-                                            <span class="venue-type">Preprint (Under Review of TKDE)</span>
-                                        </p>
-                                        <div class="publication-footer">
-                                            <div class="publication-links">
-                                                <a href="https://arxiv.org/pdf/2408.05109" class="pub-link"><i class="fas fa-file-pdf"></i> PDF</a>
-                                                <a href="https://github.com/HKUSTDial/NL2SQL_Handbook" class="pub-link"><i class="fas fa-code"></i> Code</a>
-                                                <a href="https://arxiv.org/pdf/2408.05109" class="pub-link"><i class="fas fa-quote-right"></i> Cite</a>
-                                                <a href="https://arxiv.org/pdf/2408.05109" class="pub-link"><i class="fas fa-external-link-alt"></i> DOI</a>
-                                            </div>
-                                            <div class="publication-stats">
-                                                <span class="stat-item">
-                                                    <i class="fas fa-quote-left"></i>
-                                                    <span>35 citations</span>
-                                                </span>
-                                                <span class="stat-item">
-                                                    <i class="fas fa-star"></i>
-                                                    <span>520 stars</span>
-                                                </span>
-                                            </div>
-                                        </div>
-                                    </div>
-                                </div>
-                                <div class="publication-item">
-                                    <div class="publication-thumbnail">
-                                        <img src="images/bls.jpg" alt="Paper 2 thumbnail">
-                                    </div>
-                                    <div class="publication-info">
-                                        <h3 class="publication-title">
-                                            Development and Validation of a Deep-broad Ensemble Model for Early Detection of Alzheimer's Disease
-                                            <span class="publication-year">(2023)</span>
-                                        </h3>
-                                        <p class="publication-authors">
-                                            <span class="author">Peixian Ma</span>,
-                                            <span class="author">Jing Wang</span>,
-                                            <span class="author">Zhiguo Zhou</span>,
-                                            <span class="author">C. L. Philip Chen</span>,
-                                            <span class="author">Junwei Duan</span>
-                                        </p>
-                                        <p class="publication-venue">
-                                            <span class="venue-name">Frontiers in Neuroscience 2023</span> |
-                                            <span class="venue-type">Journal (JCR Q2, IF: 5.8)</span>
-                                        </p>
-                                        <div class="publication-footer">
-                                            <div class="publication-links">
-                                                <a href="https://www.frontiersin.org/journals/neuroscience/articles/10.3389/fnins.2023.1137557/pdf?isPublishedV2=false" class="pub-link"><i class="fas fa-file-pdf"></i> PDF</a>
-                                                <a href="https://github.com/MPX0222/BroadLearningSystemTools-2.0" class="pub-link"><i class="fas fa-code"></i> Code</a>
-                                                <a href="https://www.frontiersin.org/journals/neuroscience/articles/10.3389/fnins.2023.1137557/pdf?isPublishedV2=false" class="pub-link"><i class="fas fa-quote-right"></i> Cite</a>
-                                                <a href="https://www.frontiersin.org/journals/neuroscience/articles/10.3389/fnins.2023.1137557/pdf?isPublishedV2=false" class="pub-link"><i class="fas fa-external-link-alt"></i> DOI</a>
-                                            </div>
-                                            <div class="publication-stats">
-                                                <span class="stat-item">
-                                                    <i class="fas fa-quote-left"></i>
-                                                    <span>7 citations</span>
-                                                </span>
-                                                <span class="stat-item">
-                                                    <i class="fas fa-star"></i>
-                                                    <span>27 stars</span>
-                                                </span>
-                                            </div>
-                                        </div>
-                                    </div>
-                                </div>
-                            </div>
+                            <publication-list></publication-list>
                         </div>
                     </div>
                     
@@ -913,4 +745,4 @@
     });
     </script>
 </body>
-</html> 
+</html>
