--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
     <link rel="manifest" href="/assets/img/site.webmanifest">
     <link rel="stylesheet" href="css/styles.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0/css/all.min.css">
-    <link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;500;600;700&display=swap" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css2?family=Georama:wght@400;500;600;700&display=swap" rel="stylesheet">
     <script src="../js/components/Navbar.js"></script>
     <script src="js/components/PublicationList.js"></script>
     <script src="js/components/InternshipList.js"></script>
@@ -49,10 +49,10 @@
                             <i class="fab fa-linkedin"></i>
                             <span>LinkedIn</span>
                         </a>
-                        <a href="https://gitlab.com/mpx0222" class="link-item">
+                        <!-- <a href="https://gitlab.com/mpx0222" class="link-item">
                             <i class="fab fa-gitlab"></i>
                             <span>GitLab</span>
-                        </a>
+                        </a> -->
                     </div>
                     <div class="cv-links">
                         <a href="assets/cv/CV_en.pdf" class="cv-link">
